--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -52,6 +52,11 @@
     }
   }
 
+  &:focus-visible {
+    outline: 2px solid var(--mantine-color-blue-6);
+    outline-offset: -2px;
+  }
+
   &[data-active] {
     &,
     &:hover {
